# tracktorlive

./: .gitignore  Arduino.md  COMPORT.md  Cassettes.md  DEV.md  DOCS.md  README.md  pyproject.toml  todolist.md
DOCS/: 01-overview.md  02-quickstart.md  03-installation.md  04-cli.md  05-core-concepts.md  06-reference.md  06-usage.md  07-reference.md  COMPORT.md  cli.md  installation.md  overview.md  quickstart.md
Library_Of_Casettes/: README.md  cassette_compiler.py
Library_Of_Casettes/Add_Circular_Mask/: add_circular_mask.md
Library_Of_Casettes/Add_Custom_Mask/: add_custom_mask.md
Library_Of_Casettes/Add_Rectangular_Mask/: add_rectangular_mask.md
Library_Of_Casettes/Also_Preserve_Audio/: also_preserve_audio.md
Library_Of_Casettes/Also_Record_Audio/: also_record_audio.md
Library_Of_Casettes/Also_Record_audio/: .also_record_audio.md.swp  also_record_audio.md
Library_Of_Casettes/Background_Subtract/: background-subtract.md
Library_Of_Casettes/Boost_Contrast/: boost_contrast.md
Library_Of_Casettes/Channel_Select/: channel_select.md
Library_Of_Casettes/Color_Select/: color_select.md
Library_Of_Casettes/Delayed_Start/: delayed_start.md
Library_Of_Casettes/Direction/: direction.md
Library_Of_Casettes/Display_Feed/: show_live_feed.md
Library_Of_Casettes/Display_Final_Plot/: display_final_plot.md
Show_Live_Feed/: show_live_feed.md
tracktorlive/: COMPORT.md  __init__.py  __main__.py  client.py  config.py  memorymanagement.py  paramfixing.py  server.py  sync.py  tracktor.py  trackutils.py  videoout.py
tutorials/: README.md
(+84 files in other folders)
