[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracktorlive"
version = "0.9.0"
description = "Real-time low-cost animal tracking and response delivery."
authors = [{name = "Pranav Minasandra", email = "severuscool@gmail.com"},
               {name = "Isaac Planas-Sitjà"},
               {name = "Dominique Roche"},
               {name = "Vivek H Sridhar"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "opencv-python",
    "numpy<2.0",
    "platformdirs",
    "python-ulid",
    "scikit-learn"
]

[project.scripts]
tracktorlive = "tracktorlive.__main__:main"

[tool.setuptools]
packages = ["tracktorlive"]
